--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-getting-started",
+  "name": "express-getting-started-fork",
   "version": "1.0.0",
   "description": "",
   "main": "index.mjs",
