--- a/genezio.yaml
+++ b/genezio.yaml
@@ -1,20 +1,16 @@
-name: express-getting-started
-# The region where the application will be deployed. Available regions: us-east-1, eu-central-1
+name: express-getting-started-fork
 region: us-east-1
 yamlVersion: 2
 backend:
-  # The root directory of the backend.
-  path: ./
-  language:
-    name: js
-    packageManager: npm
-  scripts:
-    deploy:
-      - npm install
-  functions:
-    - name: express-getting-started-function
-      path: ./
-      type: aws
-      handler: handler
-      entry: index.mjs
-  cloudProvider: genezio-cloud
+    path: ./
+    language:
+        name: js
+        packageManager: npm
+    functions:
+        - name: express-getting-started-function
+          path: ./
+          entry: index.mjs
+          handler: handler
+    scripts:
+        deploy:
+            - npm install
